--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Circle</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <section class="section1">
+        <div class="diet">
+            <div class="h2pa">
+                <h2> <span>Skip</span> The Diet, <br> Just Eat Healthy <br> With Food Circle</h2>
+                <p>Imagine you don't need a diet because we provide <br>  healthy and delicious food for you!</p>
+                <br><br>
+                <a href="">Order Food</a></div>
+        </div>
+        <div class="img1">
+            <img src="images/Group 8449.png" alt="Food woman">
+        </div>
+    </section>
 </body>
 </html>
