--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <section class="section1">
@@ -95,6 +101,30 @@
     
 
     <section class="section4">
+
+        <div class="full">
+            <div class="box">
+                <div class="ys">
+                    <h1>700K</h1>
+                    <p>Youtube Subscribers</p>
+
+                </div>
+
+
+                <div class="if">
+                    <h1>2.4m</h1>
+                    <p>Instagram Followers</p>
+                </div>
+
+                <b></b>
+
+                <div class="ds"> 
+                    <h1>100k</h1>
+                    <p>Dribbble Shot Likes</p>
+                </div>
+
+            </div>
+        </div>
 
     </section>
 
