--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
 
             </div>
         </div>
+        
+    </section>
+    <section class="section4">
+        <div class="footer">
+            <h1><span>FOOD </span> CIRCLE</h1>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+
+        </div>
 
     </section>
 </body>
